User extractin 2nd commit: refined

--- a/JL/twitter-users.ipynb
+++ b/JL/twitter-users.ipynb
@@ -23,14 +23,13 @@
    "source": [
     "# Set up your PostgreSQL server\n",
     "1.    Download and install Postgres.app from https://postgresapp.com/\n",
-    "2.   Open Postgres.app, and click on the database titled with your system user name; a command-line interface will appear.\n",
-    "3.    Create a table named \"twitter\" by entering CREATE DATABASE twitter;\n",
-    "4.   Execute the code below to extract the records. Ensure that the files \"corona-out-3\" and \"corona-out-3\" are placed in the same working directory."
+    "2.   Open Postgres.app, toggle \"start\".\n",
+    "3.   Execute the code below to extract the records. Ensure that the files \"corona-out-3\" and \"corona-out-3\" are placed in the same working directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -44,11 +43,49 @@
     }
    ],
    "source": [
-    "# Establish a connection to the PostgreSQL server\n",
-    "\n",
     "import psycopg2\n",
-    "import json\n",
     "\n",
+    "# Connect to the default \"postgres\" database to perform operations on databases\n",
+    "conn = psycopg2.connect(\n",
+    "    dbname=\"postgres\",\n",
+    "    user=\"liz\",  # Only replace with your system user name\n",
+    "    password=\"\",\n",
+    "    host=\"localhost\",\n",
+    "    port=\"5432\")\n",
+    "\n",
+    "# Open a cursor to perform database operations\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "# Check if the \"twitter\" database exists\n",
+    "cur.execute(\"SELECT 1 FROM pg_database WHERE datname = 'twitter';\")\n",
+    "exists = cur.fetchone()\n",
+    "\n",
+    "# Close the cursor and connection\n",
+    "cur.close()\n",
+    "conn.close()\n",
+    "\n",
+    "if exists:\n",
+    "    # Create a new connection with autocommit enabled\n",
+    "    conn = psycopg2.connect(\n",
+    "        dbname=\"postgres\",\n",
+    "        user=\"liz\",  # Only replace with your system user name\n",
+    "        password=\"\",\n",
+    "        host=\"localhost\",\n",
+    "        port=\"5432\")\n",
+    "    conn.autocommit = True\n",
+    "\n",
+    "    # Open a cursor to perform database operations\n",
+    "    cur = conn.cursor()\n",
+    "\n",
+    "    # Drop and recreate the \"twitter\" database\n",
+    "    cur.execute(\"DROP DATABASE twitter;\")\n",
+    "    cur.execute(\"CREATE DATABASE twitter;\")\n",
+    "\n",
+    "    # Close the cursor and connection\n",
+    "    cur.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "# Connect to the newly created \"twitter\" database\n",
     "conn = psycopg2.connect(\n",
     "    dbname=\"twitter\",\n",
     "    user=\"liz\",  # Only replace with your system user name\n",
@@ -56,16 +93,16 @@
     "    host=\"localhost\",\n",
     "    port=\"5432\")\n",
     "\n",
-    "# Open a cursor to perform database operations\n",
-    "cur = conn.cursor()    \n",
-    "    \n",
+    "# Open a cursor to perform further database operations\n",
+    "cur = conn.cursor()\n",
+    "\n",
     "print(\"PostgreSQL server information\")\n",
     "print(conn.get_dsn_parameters(), \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -120,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -604,7 +641,7 @@
        "19             63            1322              3210  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,6 +649,23 @@
    "source": [
     "user_df.head(20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.close()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
