initial commit for search app
Changes include:
- removed the JL folder
- added some pseudo code/outline code for the search app in search_app.ipynb
- changed username to my username (needs to be dealt with)
- added requirements.txt
- added exceptions.py

--- a/twitter-users.ipynb
+++ b/twitter-users.ipynb
@@ -29,26 +29,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PostgreSQL server information\n",
-      "{'user': 'liz', 'passfile': '/Users/liz/.pgpass', 'channel_binding': 'prefer', 'dbname': 'twitter', 'host': 'localhost', 'port': '5432', 'options': '', 'sslmode': 'prefer', 'sslcompression': '0', 'sslsni': '1', 'ssl_min_protocol_version': 'TLSv1.2', 'gssencmode': 'prefer', 'krbsrvname': 'postgres', 'target_session_attrs': 'any'} \n",
-      "\n"
+     "ename": "OperationalError",
+     "evalue": "connection to server at \"localhost\" (::1), port 5432 failed: FATAL:  database \"twitter\" does not exist\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [13], line 45\u001b[0m\n\u001b[1;32m     42\u001b[0m     conn\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     44\u001b[0m \u001b[38;5;66;03m# Connect to the newly created \"twitter\" database\u001b[39;00m\n\u001b[0;32m---> 45\u001b[0m conn \u001b[38;5;241m=\u001b[39m \u001b[43mpsycopg2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdbname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtwitter\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     47\u001b[0m \u001b[43m    \u001b[49m\u001b[43muser\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvarshiniyanamandra\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Only replace with your system user name\u001b[39;49;00m\n\u001b[1;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m    \u001b[49m\u001b[43mhost\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlocalhost\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[43m    \u001b[49m\u001b[43mport\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m5432\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Open a cursor to perform further database operations\u001b[39;00m\n\u001b[1;32m     53\u001b[0m cur \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/psycopg2/__init__.py:122\u001b[0m, in \u001b[0;36mconnect\u001b[0;34m(dsn, connection_factory, cursor_factory, **kwargs)\u001b[0m\n\u001b[1;32m    119\u001b[0m     kwasync[\u001b[39m'\u001b[39m\u001b[39masync_\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mpop(\u001b[39m'\u001b[39m\u001b[39masync_\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    121\u001b[0m dsn \u001b[39m=\u001b[39m _ext\u001b[39m.\u001b[39mmake_dsn(dsn, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m--> 122\u001b[0m conn \u001b[39m=\u001b[39m _connect(dsn, connection_factory\u001b[39m=\u001b[39;49mconnection_factory, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwasync)\n\u001b[1;32m    123\u001b[0m \u001b[39mif\u001b[39;00m cursor_factory \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    124\u001b[0m     conn\u001b[39m.\u001b[39mcursor_factory \u001b[39m=\u001b[39m cursor_factory\n",
+      "\u001b[0;31mOperationalError\u001b[0m: connection to server at \"localhost\" (::1), port 5432 failed: FATAL:  database \"twitter\" does not exist\n"
      ]
     }
    ],
    "source": [
-    "import psycopg2\n",
-    "\n",
     "# Connect to the default \"postgres\" database to perform operations on databases\n",
     "conn = psycopg2.connect(\n",
     "    dbname=\"postgres\",\n",
-    "    user=\"liz\",  # Only replace with your system user name\n",
+    "    user=\"varshiniyanamandra\",  # Only replace with your system user name\n",
     "    password=\"\",\n",
     "    host=\"localhost\",\n",
     "    port=\"5432\")\n",
@@ -68,7 +78,7 @@
     "    # Create a new connection with autocommit enabled\n",
     "    conn = psycopg2.connect(\n",
     "        dbname=\"postgres\",\n",
-    "        user=\"liz\",  # Only replace with your system user name\n",
+    "        user=\"varshiniyanamandra\",  # Only replace with your system user name\n",
     "        password=\"\",\n",
     "        host=\"localhost\",\n",
     "        port=\"5432\")\n",
@@ -88,7 +98,7 @@
     "# Connect to the newly created \"twitter\" database\n",
     "conn = psycopg2.connect(\n",
     "    dbname=\"twitter\",\n",
-    "    user=\"liz\",  # Only replace with your system user name\n",
+    "    user=\"varshiniyanamandra\",  # Only replace with your system user name\n",
     "    password=\"\",\n",
     "    host=\"localhost\",\n",
     "    port=\"5432\")\n",
@@ -278,7 +288,7 @@
     "from sqlalchemy import create_engine\n",
     "\n",
     "# Create an SQLAlchemy engine using the psycopg2 connection string\n",
-    "engine = create_engine(\"postgresql+psycopg2://liz:@localhost:5432/twitter\")\n",
+    "engine = create_engine(\"postgresql+psycopg2://varshiniyanamandra:@localhost:5432/twitter\")\n",
     "\n",
     "def get_twitter_users_dataframe(engine):\n",
     "    query = \"SELECT * FROM TwitterUser;\"\n",
@@ -670,7 +680,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -684,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -698,6 +708,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
