--- a/search_app.ipynb
+++ b/search_app.ipynb
@@ -9,13 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing required libraries\n",
-    "import json\n",
-    "import psycopg2\n",
+    "from fastapi import FastAPI, HTTPException\n",
+    "from pymongo import MongoClient\n",
+    "from psycopg2 import connect, OperationalError\n",
+    "from pydantic import BaseModel\n",
+    "from typing import List\n",
     "\n",
     "# importing exceptions\n",
     "from exceptions import *"
@@ -23,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect to the databases for user and tweet information\n"
+    "app = FastAPI()"
    ]
   },
   {
@@ -48,6 +51,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to MongoDB\n",
+    "mongo_client = MongoClient(\"mongodb://localhost:27017/\")\n",
+    "db = mongo_client[\"twitter\"]\n",
+    "tweets_collection = db[\"tweets\"]\n",
+    "\n",
+    "# Connect to PostgreSQL\n",
+    "try:\n",
+    "    conn = connect(\n",
+    "        dbname=\"twitter\",\n",
+    "        user=\"postgres\",\n",
+    "        host=\"localhost\",\n",
+    "        password=\"password\"\n",
+    "    )\n",
+    "except OperationalError as e:\n",
+    "    print(f\"Unable to connect to PostgreSQL: {e}\")\n",
+    "\n",
+    "cursor = conn.cursor()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,6 +83,48 @@
     "The search app supports searches using usernames, screen names, words used in tweets and retweets (key-words) and geographical locations.\n",
     "Users can query to get user information, like a user's screen name, their bio, follower count, their tweets, etc.\n",
     "Users can also query on key-words to get tweets related to a certain topics. They can be ordered by date and popularity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define models\n",
+    "class Tweet(BaseModel):\n",
+    "    id_str: str\n",
+    "    text: str\n",
+    "    created_at: str\n",
+    "    author: str\n",
+    "    retweet_count: int\n",
+    "\n",
+    "\n",
+    "# Define routes\n",
+    "@app.get(\"/tweets\")\n",
+    "async def search_tweets(query: str, start_date: str = None, end_date: str = None) -> List[Tweet]:\n",
+    "    # Define MongoDB query\n",
+    "    mongo_query = {\"$text\": {\"$search\": query}}\n",
+    "    if start_date:\n",
+    "        mongo_query[\"created_at\"] = {\"$gte\": start_date}\n",
+    "    if end_date:\n",
+    "        mongo_query[\"created_at\"] = {\"$lte\": end_date}\n",
+    "\n",
+    "    # Execute MongoDB query\n",
+    "    results = tweets_collection.find(mongo_query)\n",
+    "\n",
+    "    # Convert MongoDB results to Tweet objects\n",
+    "    tweets = [Tweet(**result) for result in results]\n",
+    "\n",
+    "    # Get author information from PostgreSQL and add to Tweet objects\n",
+    "    for tweet in tweets:\n",
+    "        cursor.execute(f\"SELECT * FROM users WHERE screen_name='{tweet.author}'\")\n",
+    "        result = cursor.fetchone()\n",
+    "        if result:\n",
+    "            tweet.author_name = result[1]\n",
+    "            tweet.author_location = result[2]\n",
+    "\n",
+    "    return tweets"
    ]
   },
   {
