--- a/tweets_to_mongoDB.ipynb
+++ b/tweets_to_mongoDB.ipynb
@@ -223,6 +223,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c1009d73",
+   "metadata": {},
+   "source": [
+    "Sample Tweet For Reference"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "26be2d6f",
@@ -252,6 +261,15 @@
     "                    \n",
     "        except:\n",
     "            continue"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "15b0f3f2",
+   "metadata": {},
+   "source": [
+    "Sample Tweet For Reference"
    ]
   },
   {
@@ -449,66 +467,6 @@
    "source": [
     "entity"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b0029bdd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x7faefacde220>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "collection.insert_one({'_id' : entity['id'], 'text' : entity['text']})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "99e76c47",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x7faefac9e880>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "collection.insert_one({ \n",
-    "                               '_id' : entity['retweeted_status']['id'],\n",
-    "                               'text': entity['retweeted_status']['text'],\n",
-    "                               'user_id' : entity['retweeted_status']['user']['id'],\n",
-    "                               'coordinates' : entity['retweeted_status']['coordinates'],\n",
-    "                               'quote_count' : entity['retweeted_status']['quote_count'], \n",
-    "                               'reply_count' : entity['retweeted_status']['reply_count'],\n",
-    "                               'retweet_count' : entity['retweeted_status']['retweet_count'],\n",
-    "                               'favorite_count' : entity['retweeted_status']['favorite_count'],\n",
-    "                                'timestamp' : 342432423\n",
-    "                                 })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb6d7dfc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
