--- a/twitter-users.ipynb
+++ b/twitter-users.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,27 +56,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "connection to server at \"localhost\" (::1), port 5432 failed: FATAL:  database \"twitter\" does not exist\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [13], line 45\u001b[0m\n\u001b[1;32m     42\u001b[0m     conn\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     44\u001b[0m \u001b[38;5;66;03m# Connect to the newly created \"twitter\" database\u001b[39;00m\n\u001b[0;32m---> 45\u001b[0m conn \u001b[38;5;241m=\u001b[39m \u001b[43mpsycopg2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdbname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtwitter\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     47\u001b[0m \u001b[43m    \u001b[49m\u001b[43muser\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvarshiniyanamandra\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Only replace with your system user name\u001b[39;49;00m\n\u001b[1;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m    \u001b[49m\u001b[43mhost\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlocalhost\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[43m    \u001b[49m\u001b[43mport\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m5432\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Open a cursor to perform further database operations\u001b[39;00m\n\u001b[1;32m     53\u001b[0m cur \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/psycopg2/__init__.py:122\u001b[0m, in \u001b[0;36mconnect\u001b[0;34m(dsn, connection_factory, cursor_factory, **kwargs)\u001b[0m\n\u001b[1;32m    119\u001b[0m     kwasync[\u001b[39m'\u001b[39m\u001b[39masync_\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mpop(\u001b[39m'\u001b[39m\u001b[39masync_\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    121\u001b[0m dsn \u001b[39m=\u001b[39m _ext\u001b[39m.\u001b[39mmake_dsn(dsn, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m--> 122\u001b[0m conn \u001b[39m=\u001b[39m _connect(dsn, connection_factory\u001b[39m=\u001b[39;49mconnection_factory, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwasync)\n\u001b[1;32m    123\u001b[0m \u001b[39mif\u001b[39;00m cursor_factory \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    124\u001b[0m     conn\u001b[39m.\u001b[39mcursor_factory \u001b[39m=\u001b[39m cursor_factory\n",
-      "\u001b[0;31mOperationalError\u001b[0m: connection to server at \"localhost\" (::1), port 5432 failed: FATAL:  database \"twitter\" does not exist\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "## No need to run below cell"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "# Connect to the default \"postgres\" database to perform operations on databases\n",
     "conn = psycopg2.connect(\n",
     "    dbname=\"postgres\",\n",
-    "    user=\"varshiniyanamandra\",  # Only replace with your system user name\n",
+    "    user=\"vishalreddy\",  # Only replace with your system user name\n",
     "    password=\"\",\n",
     "    host=\"localhost\",\n",
     "    port=\"5432\")\n",
@@ -96,7 +90,7 @@
     "    # Create a new connection with autocommit enabled\n",
     "    conn = psycopg2.connect(\n",
     "        dbname=\"postgres\",\n",
-    "        user=\"varshiniyanamandra\",  # Only replace with your system user name\n",
+    "        user=\"vishalreddy\",  # Only replace with your system user name\n",
     "        password=\"\",\n",
     "        host=\"localhost\",\n",
     "        port=\"5432\")\n",
@@ -116,7 +110,7 @@
     "# Connect to the newly created \"twitter\" database\n",
     "conn = psycopg2.connect(\n",
     "    dbname=\"twitter\",\n",
-    "    user=\"varshiniyanamandra\",  # Only replace with your system user name\n",
+    "    user=\"vishalreddy\",  # Only replace with your system user name\n",
     "    password=\"\",\n",
     "    host=\"localhost\",\n",
     "    port=\"5432\")\n",
@@ -130,7 +124,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(\n",
+    "    dbname=\"postgres\",\n",
+    "    user=\"vishalreddy\",  # Only replace with your system user name\n",
+    "    password=\"\",\n",
+    "    host=\"localhost\",\n",
+    "    port=\"5432\")\n",
+    "\n",
+    "# Open a cursor to perform database operations\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "# Check if the \"twitter\" database exists\n",
+    "cur.execute(\"SELECT 1 FROM pg_database WHERE datname = 'twitter';\")\n",
+    "exists = cur.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -185,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,33 +247,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "insert_records(\"corona-out-2\")"
+    "#insert_records(\"corona-out-2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of user IDs: 18461\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "view_users(conn)"
+    "#view_users(conn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,14 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of user IDs: 105181\n"
+      "Number of user IDs: 88068\n"
      ]
     }
    ],
