Added initial code for search app

--- a/search_app.ipynb
+++ b/search_app.ipynb
@@ -4,85 +4,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Twitter Data Search Application"
+    "# Search Application"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing required libraries\n",
-    "from fastapi import FastAPI, HTTPException\n",
+    "import psycopg2\n",
     "from pymongo import MongoClient\n",
-    "from psycopg2 import connect, OperationalError\n",
-    "from pydantic import BaseModel\n",
-    "from typing import List\n",
-    "\n",
-    "# importing exceptions\n",
+    "from fastapi import HTTPException\n",
     "from exceptions import *"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app = FastAPI()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Information About the Databases\n",
-    "Fields in the user database:\n",
-    "* 'id'\n",
-    "* 'name'\n",
-    "* 'screen_name'\n",
-    "* 'location'\n",
-    "* 'created_at'\n",
-    "* 'followers_count'\n",
-    "* 'friends_count'      \n",
-    "* 'statuses_count'     (The total number of tweets that the account has posted.)\n",
-    "* 'favourites_count'   (The total number of tweets that the account has liked.)"
+    "## Connecting to the Databases Storing the Information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'user': 'varshiniyanamandra', 'passfile': '/Users/varshiniyanamandra/.pgpass', 'channel_binding': 'prefer', 'dbname': 'twitter', 'host': 'localhost', 'port': '5432', 'options': '', 'sslmode': 'prefer', 'sslcompression': '0', 'sslsni': '1', 'ssl_min_protocol_version': 'TLSv1.2', 'gssencmode': 'prefer', 'krbsrvname': 'postgres', 'target_session_attrs': 'any'} \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Connect to MongoDB\n",
-    "mongo_client = MongoClient(\"mongodb://localhost:27017/\")\n",
-    "db = mongo_client[\"twitter\"]\n",
-    "tweets_collection = db[\"tweets\"]\n",
-    "\n",
-    "# Connect to PostgreSQL\n",
+    "# connecting to the PostgreSQL database\n",
     "try:\n",
-    "    conn = connect(\n",
-    "        dbname=\"twitter\",\n",
-    "        user=\"postgres\",\n",
-    "        host=\"localhost\",\n",
-    "        password=\"password\"\n",
+    "    p_conn = psycopg2.connect(\n",
+    "        dbname = \"twitter\",\n",
+    "        user = \"varshiniyanamandra\",\n",
+    "        password = \"\",\n",
+    "        host = \"localhost\",\n",
+    "        port = \"5432\"\n",
     "    )\n",
-    "except OperationalError as e:\n",
+    "except psycopg2.OperationalError as e:\n",
+    "    # raise an error if the connection is unsuccessful\n",
     "    print(f\"Unable to connect to PostgreSQL: {e}\")\n",
     "\n",
-    "cursor = conn.cursor()"
+    "# opening a cursor to perform database operations\n",
+    "p_cur = p_conn.cursor()\n",
+    "\n",
+    "# print the PostgreSQL server information\n",
+    "print(p_conn.get_dsn_parameters(), \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# connect to the MongoDB database\n",
+    "mongo_conn = MongoClient('mongodb://localhost:27017/')\n",
+    "mongo_db = mongo_conn['twitter_data']\n",
+    "tweets_collection = mongo_db['tweets']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Functionalities of the Search App\n",
-    "The search app supports searches using usernames, screen names, words used in tweets and retweets (key-words) and geographical locations.\n",
-    "Users can query to get user information, like a user's screen name, their bio, follower count, their tweets, etc.\n",
-    "Users can also query on key-words to get tweets related to a certain topics. They can be ordered by date and popularity."
+    "## Building the Search Application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining Utility Functions"
    ]
   },
   {
@@ -91,103 +94,116 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define models\n",
-    "class Tweet(BaseModel):\n",
-    "    id_str: str\n",
-    "    text: str\n",
-    "    created_at: str\n",
-    "    author: str\n",
-    "    retweet_count: int\n",
-    "\n",
-    "\n",
-    "# Define routes\n",
-    "@app.get(\"/tweets\")\n",
-    "async def search_tweets(query: str, start_date: str = None, end_date: str = None) -> List[Tweet]:\n",
-    "    # Define MongoDB query\n",
-    "    mongo_query = {\"$text\": {\"$search\": query}}\n",
-    "    if start_date:\n",
-    "        mongo_query[\"created_at\"] = {\"$gte\": start_date}\n",
-    "    if end_date:\n",
-    "        mongo_query[\"created_at\"] = {\"$lte\": end_date}\n",
-    "\n",
-    "    # Execute MongoDB query\n",
-    "    results = tweets_collection.find(mongo_query)\n",
-    "\n",
-    "    # Convert MongoDB results to Tweet objects\n",
-    "    tweets = [Tweet(**result) for result in results]\n",
-    "\n",
-    "    # Get author information from PostgreSQL and add to Tweet objects\n",
-    "    for tweet in tweets:\n",
-    "        cursor.execute(f\"SELECT * FROM users WHERE screen_name='{tweet.author}'\")\n",
-    "        result = cursor.fetchone()\n",
-    "        if result:\n",
-    "            tweet.author_name = result[1]\n",
-    "            tweet.author_location = result[2]\n",
-    "\n",
-    "    return tweets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getUserInfo(userid):\n",
-    "    try:\n",
-    "        # search for the userid in the database\n",
-    "        # if found, pull up all the relevant info about the user\n",
-    "        pass\n",
-    "    except:\n",
-    "        raise UserNotFoundError"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getTweetInfo(tweetid):\n",
-    "    try:\n",
-    "        # search for the tweetid\n",
-    "        # return the tweet, comments, retweet information, etc. if found in the database\n",
-    "        pass\n",
-    "    except:\n",
-    "        raise TweetNotFoundError"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getKeywordTweets(keywords):\n",
-    "    keyword_list = keywords.split(\",\")\n",
-    "    for keyword in keywords:\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def search_twitter(userid = None, tweetid = None, keywords = None):\n",
+    "# function to get user information\n",
+    "def get_user_info(user_id: str):\n",
     "    \"\"\"\n",
-    "        This function allows the end-user to query the database based on any of the specified input parameters.\n",
-    "        Multiple input parameters can also be specified for a more comprehensive search, if so desired.\n",
+    "        This function returns the user information as a JSON object.\n",
+    "        Input:\n",
+    "            user_id (str): Twitter user ID which we want to look up\n",
+    "        Output:\n",
+    "            user_out (JSON object): user information corresponding to user_id\n",
     "    \"\"\"\n",
-    "    if userid is not None:\n",
-    "        getUserInfo(userid)\n",
+    "    p_cur.execute(\"SELECT * FROM TwitterUser WHERE id = {0};\".format(user_id))\n",
+    "    user_info = p_cur.fetchone()\n",
+    "    if user_info is None:\n",
+    "        # raise an exception if the user doesn't exist in the database\n",
+    "        raise HTTPException(status_code = UserNotFoundError.code, detail = UserNotFoundError.description)\n",
+    "    user_out = {\n",
+    "        'id': user_info[0],\n",
+    "        'name': user_info[1],\n",
+    "        'screen_name': user_info[2],\n",
+    "        'location': user_info[3],\n",
+    "        'created_at': user_info[4],\n",
+    "        'followers_count': user_info[5],\n",
+    "        'friends_count': user_info[6],\n",
+    "        'statuses_count': user_info[7],\n",
+    "        'favorites_count': user_info[8]\n",
+    "    }\n",
     "\n",
-    "    if tweetid is not None:\n",
-    "        getTweetInfo(tweetid)\n",
-    "    \n",
-    "    if keywords is not None:\n",
-    "        getKeywordTweets(keywords)"
+    "    return user_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to search tweets containing a specified keyword\n",
+    "def search_tweets_keyword(keyword: str):\n",
+    "    \"\"\"\n",
+    "        Function to get the information of tweets based on a user-specified keyword.\n",
+    "        Input:\n",
+    "            keyword (str): user-specified keyword\n",
+    "        Output:\n",
+    "            out (list): list of tweets containing the keyword\n",
+    "    \"\"\"\n",
+    "    out = []\n",
+    "    query = {'$text': {'$search': keyword}}\n",
+    "    tweets_match = tweets_collection.find(query) # we can add .limit(PAGE_LIMIT) here, if needed\n",
+    "    for result in tweets_match:\n",
+    "        tweet = {\n",
+    "            'id': result['_id'],\n",
+    "            'text': result['text'],\n",
+    "            'user_id': result['user_id'],\n",
+    "            'quote_count': result['quote_count'],\n",
+    "            'reply_count': result['reply_count'],\n",
+    "            'retweet_count': result['retweet_count'],\n",
+    "            'favorite_count': result['favorite_count'],\n",
+    "            'created_at': result['timestamp'],\n",
+    "            'coordinates': result['coordinates']\n",
+    "        }\n",
+    "        # add information on whether the tweet is a retweet\n",
+    "        if 'retweet' in result:\n",
+    "            tweet['retweet'] = \"Yes\"\n",
+    "        else:\n",
+    "            tweet['retweet'] = \"No\"\n",
+    "\n",
+    "        \n",
+    "        out.append(tweet)\n",
+    "\n",
+    "    # sort the results from newest to oldest before returning\n",
+    "    return out.sort(key = lambda x: int(x['timestamp_ms']), reverse = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to search tweets based on tweet id\n",
+    "def retrieve_tweet(tweet_id: str):\n",
+    "    \"\"\"\n",
+    "        Function to get the information of a tweet based on a user-specified tweet ID.\n",
+    "        Input:\n",
+    "            tweet_id (str): user-specified tweet ID\n",
+    "        Output:\n",
+    "            tweet: tweet corresponding to tweet_id\n",
+    "    \"\"\"\n",
+    "    query = {'id': tweet_id}\n",
+    "    result = tweets_collection.find_one(query)\n",
+    "    if result is None:\n",
+    "        # raise an exception if the tweet doesn't exist in the database\n",
+    "        raise HTTPException(status_code = TweetNotFoundError.code, detail = TweetNotFoundError.description)\n",
+    "    tweet = {\n",
+    "        'id': result['_id'],\n",
+    "        'text': result['text'],\n",
+    "        'user_id': result['user_id'],\n",
+    "        'quote_count': result['quote_count'],\n",
+    "        'reply_count': result['reply_count'],\n",
+    "        'retweet_count': result['retweet_count'],\n",
+    "        'favorite_count': result['favorite_count'],\n",
+    "        'created_at': result['timestamp'],\n",
+    "        'coordinates': result['coordinates']\n",
+    "    }\n",
+    "    # add information on whether the tweet is a retweet\n",
+    "    if 'retweet' in result:\n",
+    "        tweet['retweet'] = \"Yes\"\n",
+    "    else:\n",
+    "        tweet['retweet'] = \"No\"\n",
+    "\n",
+    "    return tweet"
    ]
   }
  ],
